feat(api): introduce /search endpoint for search by namespace
