# testlib/api_utility.py
@@ -14,3 +14,11 @@ def fetch_client_repo_from_api(client, client_env, sync_user):
     }
     fetch_repo_list_resp = client.get(get_clientenv_repos_url + "?" + urllib.parse.urlencode(query_params), headers=headers(sync_user))
     return fetch_repo_list_resp.json()[0]
+
+search_repos_url = f"/api/search/git/repos"
+def search_repos_from_api(client, sync_user, namespace):
+    query_params = {
+        "namespace" : namespace,
+    }
+    search_repo_resp = client.get(search_repos_url + "?" + urllib.parse.urlencode(query_params), headers=headers(sync_user))
+    return search_repo_resp.json()
